--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,4 +2,103 @@
   --primary-color: #f15a24;
   --text-color: #4e4b66;
   --heading-color: #1a1a1a;
+  --card-bg: #f7f7f7;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Roboto", serif;
+  font-size: 16px;
+  color: var(--text-color);
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 39px;
+  line-height: 46px;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+h1, h2 {
+  color: var(--heading-color);
+}
+
+ul {
+  list-style: none;
+}
+
+picture {
+  display: flex;
+}
+
+.container {
+  max-width: 1280px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+
+.icon {
+  padding: 3px;
+}
+
+.card {
+  background-color: var(--card-bg);
+  padding: 24px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+}
+.card__content p {
+  text-align: center;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 300;
+}
+@media (max-width: 767px) {
+  .card + .card {
+    margin-top: 16px;
+  }
+}
+@media (min-width: 768px) {
+  .card {
+    align-items: start;
+  }
+  .card__content {
+    align-items: start;
+  }
+  .card__content p {
+    text-align: left;
+  }
+}
+
+@media (min-width: 768px) {
+  .section-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
+  }
+}
+@media (min-width: 1024px) {
+  .section-card {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+  }
 }/*# sourceMappingURL=styles.css.map */
