--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,1 +1,4 @@
-@import "_variables.scss";
+@import "atoms/variables";
+@import "atoms/global";
+@import "molecules/card";
+@import "layout/section-card"
