--- a/styles/atoms/_global.scss
+++ b/styles/atoms/_global.scss
@@ -8,12 +8,34 @@ body {
     font-family: "Roboto", serif;
     font-size: 16px;
     color: var(--text-color);
+
+    @media (min-width: 768px) {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+   
+}
+
+a {
+    display:inline-block;
+    text-decoration: none;
 }
 
 h1 {
     font-weight: 900;
     font-size: 39px;
     line-height: 46px;
+
+    @media (min-width: 768px) {
+        font-size: 49px;
+        line-height: 59px;
+    }
+
+    @media (min-width: 1024px) {
+        font-size: 61px;
+        line-height: 73px;
+    }
 }
 
 h2 {
